# relearning_it

./: .gitignore  LICENSE  README.md
0.Technolog_Background/: 0.Technolog_Background.md
1.CPU_Memory_Disk/: 1.1.CPU.md  1.2.内存.md
1.CPU_Memory_Disk_Network/Network/IO_multiplexing/: CMakeLists.txt  README.md  main  step1_server.c  step2_client.c  step3_client.c
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t12_reliable_tcp/: CMakeLists.txt  t12_reliable_tcp1_server.c  t12_reliable_tcp2_client.c  t12_reliable_tcp3_server.c  t12_reliable_tcp4_client.c
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t18_poll_server_one_thread/: CMakeCache.txt  CMakeLists.txt  t18_poll_server_one_thread.c
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t18_poll_server_one_thread/.cmake/api/v1/reply/: cache-v2-bad9aa34a1c10c965361.json  cmakeFiles-v1-13ddbfa916016df30fd6.json  codemodel-v2-101a087669716eae79b5.json  index-2024-01-02T06-11-21-0173.json  target-t18_poll_server_one_thread-Debug-5bd17c5deb2cff2ed7f7.json
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t18_poll_server_one_thread/lib/: acceptor.h  epoll_dispatcher.c  event_loop.c  event_loop_thread.h  http_response.c  log.h  sock_ntop.c  tcp_connection.h  thread_pool.h
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t19_poll_server_multi_threads/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t19_poll_server_multi_threads/.cmake/api/v1/reply/: cache-v2-4ca2ff91888ccf84d177.json  cmakeFiles-v1-9c6c339177cd19259450.json  codemodel-v2-0fed7eec88b2964e51d8.json  index-2024-01-02T06-26-40-0327.json  target-lib2-Debug-67a648c730b792371667.json  target-t19_poll_server_multi_thread-Debug-535d880bca85199a3008.json  toolchains-v1-30cb24357ccee65b3b3b.json
1.CPU_Memory_Disk_Network/Network/Network_Programming_In_Practice/NPIP_C/t19_poll_server_multi_threads/lib/: buffer.c  channel.c  common.h  inetaddress.h  log.c  poll_dispatcher.c  read.c  tcp_connection.c  utils.c
2.OperatingSystem/: 2.1.通用概念.md
3.ProgrammingLanguage/: 3.1.汇编.md  语言特性 - 来自维基百科.xlsx
4.perfermance/: 001.Web Server提供静态资源 vs Nginx提供静态资源.md
(+155 files in other folders)
